--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --text-color: #f4f4f4;
   --primary-color: #e0122f;
   --secondary-color: #429e39;
-  --border-radius: 5px;
+  --border-radius: 10px;
 }
 
 * {
@@ -39,6 +39,11 @@ main section {
   width: 50%;
 }
 
+h1 {
+  font-weight: lighter;
+  font-size: x-large;
+}
+
 input {
   width: 100%;
   height: 40px;
@@ -46,14 +51,17 @@ input {
   background-color: var(--background-color);
   color: var(--text-color);
   border: solid 2px var(--text-color);
+  font-size: large;
 }
 
 button {
   background-color: var(--primary-color);
   border: solid 2px black;
   border-radius: var(--border-radius);
-  padding: 5px 10px;
+  padding: 8px 20px;
   color: var(--text-color);
+  font-size: large;
+  cursor: pointer;
 }
 
 hr {
