--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@ input {
   color: var(--text-color);
   border: solid 2px var(--text-color);
   font-size: large;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 button {
@@ -92,6 +94,10 @@ hr {
 
 .email_input, .password_input {
   width: 300px;
+}
+
+.password_input {
+  margin-top: 20px;
 }
 
 .login button {
