--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,14 @@ main section {
 }
 
 h1 {
+  font-size: 3em;
+  font-weight: bold;
+  color: var(--primary-color);
+  margin-top: -30px;
+  margin-bottom: 10px;
+}
+
+h2 {
   font-weight: lighter;
   font-size: x-large;
 }
