--- a/src/pantallaRegistro2.css
+++ b/src/pantallaRegistro2.css
@@ -47,9 +47,8 @@ label {
     color: #ffffffcc;
 }
 
-
-input[type="name"],
-input[type="dateofbirth"] {
+input[type="Name"],
+input[type="Username"] {
     padding: 10px;
     border: 2px solid #ffffff;
     border-radius: 10px;
@@ -89,3 +88,26 @@ input::placeholder {
     box-shadow: inset 4px 4px 12px rgba(0, 0, 0, 0.3), inset -4px -4px 12px rgba(0, 0, 0, 0.3);
     transform: scale(0.95);
 }
+
+  .dob-container {
+    display: flex;
+    gap: 10px;
+  }
+
+  .dob-container select {
+    padding: 20px;
+    font-style: italic;
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    outline: none;
+    text-align: center;
+    border-radius: 10px; /* Aquí agregamos bordes redondeados */
+  }
+
+  option {
+    color: black;
+  }
+  legend {
+    font-style: italic;
+  }
