--- a/src/pantallaRegistro3.css
+++ b/src/pantallaRegistro3.css
@@ -5,55 +5,72 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
     height: 100vh;
     margin: 0;
+    justify-content: flex-start; 
+    padding-top: 50px; 
+    
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-bottom: 10px;
+    margin-top: 5px; 
     color: #c91212;
-    font-family: 'Pacifico', cursive; 
+    /*font-family: 'Pacifico', cursive;*/ 
+    font-family: 'Arial', sans-serif;
+  
 }
 p {
     font-size: 1rem;
     margin: 5px 0;
     color: white;
+    margin-top: 5px; 
+    font-family: 'Arial', sans-serif;
 }
 .genres {
     display: flex;
-    flex-wrap: wrap; /* Permite que los botones pasen a la siguiente línea */
-    justify-content: center; /* Centra los botones */
+    flex-wrap: wrap;
+    justify-content: center; 
     margin: 20px 0;
-    gap: 10px; /* Espacio entre botones */
-    max-width: 500px; /* Ajusta según el diseño deseado */
+    gap: 10px; 
+    max-width: 500px; 
     
 }
-
 .genre {
     padding: 10px 15px;
-    border: none;
+    /*border: 2px solid #c91212; */
+    border: 2px solid white;
     border-radius: 8px;
-    background-color: #c91212;
-    color: white;
+    background-color: transparent; 
+    color: #ffffff; 
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s;
 }
 
 .genre:hover {
-    background-color: #a10e10;
+    background-color: #c91212; 
+    color: white; 
 }
-
-
 
 .search {
     display: flex;
     align-items: center;
     margin: 20px 0;
 }
-
+.search-input {
+    width: 100%;
+    padding: 10px;
+    padding-left: 110px; 
+    border: 2px solid white;
+    border-radius: 10px;
+    background: transparent;
+    color: white;
+    outline: none;
+    font-style: italic;
+}
 input[type="text"] {
     padding: 10px;
     border: 2px solid white;
@@ -102,4 +119,129 @@ input[type="text"] {
 }
 .selected {
     outline: 3px solid white;
+}
+
+.artist-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+}
+
+.artist-item {
+    display: flex;
+    align-items: center;
+    
+    border-radius: 15px;
+    padding: 10px;
+    width: 250px; 
+    box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.2);
+    margin-bottom: 15px; 
+    justify-content: space-between; 
+    background-color: white;
+    border: 1px solid  #ffffff; 
+}
+
+
+
+.artist-item img {
+    width: 40px; 
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover; 
+    margin-right: 10px; 
+}
+
+.artist-name {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    flex-grow: 1; 
+}
+.icone.lupa {
+    width: 20px;
+    height: 20px;
+    border: 10px solid black;
+    border-radius: 50%;
+    position: relative;
+  }
+  
+  .icone.lupa:after {
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    background-color: black;
+    display: block;
+    content: "";
+    top: 50%;
+    left: 50%;
+    
+    transform: rotate(45deg);
+    transform-origin: -10px 40px;
+    
+  }
+  .input-wrapper {
+    position: relative;
+    width: 271px;
+  }
+  
+  .input {
+    box-sizing: border-box;
+    color: #191919;
+    padding: 15px 15px 15px 35px;
+    width: 100%;
+  }
+  
+  .input.password {
+    padding: 15px 35px 15px 15px;
+  }
+  
+  .input-icon {
+    color: white;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  .input-icon.password {
+    left: unset;
+    right: 12px;
+  }
+  
+input[type="search"] {
+    padding: 10px;
+    padding-left: 32px; 
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+    background-color: transparent;
+    color: white;
+    font-size: 1rem;
+    outline: none;
+}
+
+input::placeholder {
+    color: #ffffffaa;
+    font-style: italic;
+}
+.remove-btn {
+    background: none;
+    border: none;
+    color:solid red;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.remove-btn:hover {
+    color: darkred;
+}
+.divider {
+    width: 60%; /* Ajusta el ancho */
+    border: none;
+    border-top: 2px solid red; /* Línea roja */
+    margin: 20px auto; /* Espaciado arriba y abajo */
 }
