--- a/src/pages/upload/upload.css
+++ b/src/pages/upload/upload.css
@@ -12,10 +12,9 @@ main {
   position: relative;
   display: flex;
   flex-direction: row;
-  border: solid 3px black;
   border-radius: var(--border-radius);
   background-color: white;
-  height: 50px;
+  height: 45px;
   width: 500px;
   border-radius: 50px;
   padding-left: 15px;
@@ -27,6 +26,9 @@ main {
   color: var(--text-color-dark);
   border-radius: 50px;
   height: 100%;
+}
+.search input::placeholder {
+  color: #ccc;
 }
 
 .search button {
@@ -49,7 +51,7 @@ main {
   display: inline-block;
   width: 25px;
   height: 25px;
-  background-image: url('assets/icons/search.svg');
+  background-image: url('../../assets/icons/search.svg');
   cursor: pointer;
 }
 
@@ -73,8 +75,11 @@ textarea {
   border-radius: 30px;
   padding: 10px 25px;
 }
+textarea::placeholder {
+  font-style: italic;
+}
 
-.upload_button {
+.button {
   margin-top: 20px;
   width: 200px;
 }
