--- a/src/pages/profile/detailedSong.css
+++ b/src/pages/profile/detailedSong.css
@@ -1,89 +1,222 @@
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+:root {
+    --background-color: #303030;
+    --text-color: #f4f4f4;
+    --primary-color: #e0122f;
 }
 
 
-.post-container {
+body {
+    color: white;
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
+    overflow: auto;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    background-color: var(--background-color);
+}
+
+
+.container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+
+.sidebar {
+    width: 26%;
+    min-width: 90px;
+    left: 0;
+    background-color: var(--background-color);
+    color: white;
+    height: 100%;
+    padding: 0 1rem;
+    position: fixed;
+    transition: width 0.3s ease-in-out;
+}
+
+
+.sidebar a {
+    color: white;
+    text-decoration: none;
+}
+
+
+.sidebar .sidebartop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-top: 1rem;
+    height: 55px;
+    margin-bottom: 3rem;
+}
+
+
+.sidebar .logo {
+    width: 50px;
+}
+
+
+.sidebar .logo img {
+    height: auto;
+    max-width: 50px;
+}
+
+
+.sidebar nav ul li a img {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+}
+
+
+.sidebar .actual a .text {
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+
+.sidebar nav ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+
+.sidebar nav ul li {
+    display: block;
+    align-items: center;
+    padding: 1.25rem 0;
+    position: relative;
+    background-color: transparent;
+    transition: background-color 0.25s ease-in-out;
+}
+
+
+.sidebar nav ul li a {
+    display: block;
+}
+
+
+.sidebar nav ul li a .text {
+    position: relative;
+    left: 1rem;
+    top: -0.2rem;
+}
+
+
+.sidebar .account {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    width: calc(100% - 2rem);
+    position: absolute;
+    bottom: 1rem;
+}
+
+
+.sidebar .account .logout a img {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+
+.main {
+    margin-left: 27.7%;
+    width: 900px;
+    background-color: #303030;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+
+.profile-container {
     display: flex;
     justify-content: space-between;
     background-color: #222;
     color: white;
+    padding: 100px;
     border-radius: 10px;
     width: 100%;
-    max-width: 1000px;
-    height: 90vh;
-}
-h3 {
-    width: 100%;
-    text-align: left;
-    font-size: 18px;
-    font-weight: bold;
+    max-width: 800px;
 }
 .post {
-    width: 70%;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex: 2;
+    padding: 40px;
+    position: relative;
+    top: -30px; 
+ 
+}
+.header {
+    font-size: 20px;
+    font-weight: bold;
 }
 .content {
     margin-top: 10px;
 }
 .song {
     display: flex;
+    justify-content: space-between; 
     align-items: center;
-    gap: 10px;
-    margin-top: 10px;
+    width: 100%;
 }
+
+
+.song-text {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.song-title {
+    font-size: 28px;
+    font-weight: bold;
+    color: white;
+}
+
+
+.artist {
+    font-size: 24px;
+    color: #ddd;
+    margin-top: 2px;
+}
+
+
 .play-button {
+    font-size: 30px;
+    cursor: pointer;
     background: none;
     border: none;
     color: white;
-    font-size: 20px;
-    cursor: pointer;
-}
-.feeling {
-    background: #a33;
-    padding: 5px;
-    border-radius: 5px;
-    display: inline-block;
-    margin-top: 10px;
-    width: 100%;
-    text-align: center;
 }
 
-.comments-container {
-    flex: 1.5; /* Aumenta la proporción de la sección de comentarios */
-    width: 30%; /* O un valor mayor según lo que necesites */
-    max-width: 350px;
+
+
+
+.footer {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.comments-section {
+   
+    flex: 1.5; 
+    width: 550px; 
     background-color: #333;
     padding: 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 10px;
-    position: relative;
 }
-
-.comments-container .stats {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    left: -80px;
-    top: 40px;
-    text-align: end;
-}
-
-.comments-container .stats span {
-    font-size: 25px;
-    color: gray;
-    margin-bottom: 5px;
-}
-
 .comments-section h3 {
     margin-bottom: 10px;
 }
@@ -101,4 +234,103 @@ h3 {
 }
 .comment-text {
     margin-top: 5px;
+}
+
+
+
+
+.back-button .arrow {
+    font-size: 22px;
+}
+
+
+
+
+.profile-header {
+    display: flex;
+    align-items: center;
+    gap: 40px; 
+}
+
+
+.back-button {
+    font-size: 50px; 
+    color: white;
+    cursor: pointer;
+    transition: color 0.3s;
+    top: -50px;
+}
+
+
+.back-button:hover {
+    color: #ff4a4a; 
+}
+.profile-pic {
+    width: 30px; 
+    height: 30px;
+    border-radius: 50%; 
+    object-fit: cover; 
+    border: 2px solid white; 
+    margin-left: 20px; 
+
+}
+
+
+.friend-name {
+    font-size: 30px; 
+    font-weight: bold;
+    color: white;
+    margin-left: 5px; 
+}
+.stats-bar {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    background: #222; 
+    color: white;
+    padding: 10px;
+    margin: 15px 0;
+    border-radius: 10px;
+    width: 40px; 
+    max-width: 60px;
+    font-size: 16px;
+    font-weight: bold;
+   
+}
+
+
+.stat-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    margin-bottom: 10px; 
+}
+
+
+.stat-item i {
+    font-size: 20px; 
+}
+
+
+.stat-item span {
+    margin-top: 5px;
+    font-size: 14px;
+}
+
+.feeling {
+    background: #a33;
+    padding: 5px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 25px; 
+    font-weight: bold; 
+    padding: 10px; 
+}
+
+.mood {
+    font-size: 22px; 
+    font-weight: bold;
 }
