--- a/src/pages/styles/sidebar.css
+++ b/src/pages/styles/sidebar.css
@@ -42,6 +42,7 @@ nav a:hover {
 nav a i {
   margin-right: 10px;
   background-repeat: no-repeat;
+  transform: translateY(-3px);
 }
 nav a:hover > i {
   /* Filtro para obtener el color primario #e0122f en el icono */
