--- a/src/pages/explore/explore.css
+++ b/src/pages/explore/explore.css
@@ -4,11 +4,58 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 100px 0 100px 0;
+    margin: 30px 0 100px 0;
     gap: 30px;
 }
 
-.infocuenta{
+.search div {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    border-radius: var(--border-radius);
+    background-color: white;
+    height: 45px;
+    width: 500px;
+    border-radius: 50px;
+    padding-left: 15px;
+}
+  
+.search input {
+    border: none;
+    background-color: white;
+    color: var(--text-color-dark);
+    border-radius: 50px;
+    height: 100%;
+}
+.search input::placeholder {
+    color: #ccc;
+}
+  
+.search button {
+    border: none;
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    width: 50px;
+}
+.search button:hover {
+    background-color: var(--primary-color-dark);
+}
+  
+.icon_search {
+    position: absolute;
+    transform: translate(-5px, -30px);
+    right: 10px;
+    top: 40px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-image: url('../../assets/icons/search.svg');
+    cursor: pointer;
+}
+
+.infocuenta {
     height: 50px;
     width: 100%;
     background-color: #303030;
