--- a/src/pages/profile/ajustes.css
+++ b/src/pages/profile/ajustes.css
@@ -5,159 +5,18 @@
     --primary-color: #e0122f;
 }
 
-body {
-    color: white;
-    padding: 0;
-    margin: 0;
-    min-height: 100vh;
-    overflow: auto;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    background-color: var(--background-color);
-}
 
-.container {
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.sidebar {
-    width: 26%;
-    min-width: 100px;
-    left: 0;
-    background-color: var(--background-color);
-    color: white;
-    height: 100%;
-    padding: 0 1rem;
-    position: fixed;
-    transition: width 0.3s ease-in-out;
-    /*border-right: 1.5px solid #444444;*/
-}
-
-.sidebar a {
-    color: white;
-    text-decoration: none;
-}
-
-.sidebartop {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-top: 1rem;
-    height: 55px;
-    margin-bottom: 3rem;
-}
-
-.logo {
-    width: 50px;
-}
-
-.logo img {
-    height: auto;
-    max-width: 50px;
-}
-
-.sidebar nav ul li a img {
-    width: 24px;
-    height: 24px;
-    object-fit: contain;
-}
-
-.actual a .text {
-    color: var(--primary-color);
-    font-weight: bold;
-}
-
-.sidebar nav ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.sidebar nav ul li {
-    display: block;
-    align-items: center;
-    padding: 1.25rem 0;
-    position: relative;
-    background-color: transparent;
-    transition: background-color 0.25s ease-in-out;
-}
-
-.sidebar nav ul li a {
-    display: block;
-}
-
-.sidebar nav ul li a .text {
-    position: relative;
-    left: 1rem;
-    top: -0.2rem;
-}
-
-.account {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
-    width: calc(100% - 2rem);
-    position: absolute;
-    bottom: 1rem;
-}
-
-.logout a img {
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.main {
-    margin-left: 27.7%;
-    width: 900px;
-    background-color: #303030;
-    border: 1px solid #444444;
-    border-radius: 10px;
-    overflow: hidden;
-       
-}
-
-.header {
-    position: relative; /* Asegura que el contenedor se ajuste al contenido */
-    height: 150px;
-    overflow: hidden; /* Oculta cualquier contenido que se desborde */
-}
-
-.header-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Asegura que la imagen cubra todo el contenedor */
-    object-position: center; /* Centra la imagen */
-}
-
-.profile {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    position: relative;
-}
-
-.avatar {
-    width: 80px;
-    height: 80px;
-    position: absolute;
+.icon_edit {
     top: -40px;
-}
-
-.marco {
-   
-    border-radius: 50%;
-    border: 1px solid white;
-    overflow: hidden; /* Oculta cualquier contenido que se desborde */
-}
-
-.avatar-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Asegura que la imagen cubra todo el contenedor */
-    object-position: center; /* Centra la imagen */
+    left: 10px;
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url('../../assets/icons/edit.svg');
+    cursor: pointer;
+    z-index: 100;
+    background-repeat: no-repeat;
 }
 
 .info {
